[metadata]
name=gerance
version=0.0.1
author=Florian Dupeyron
author_email=florian.dupeyron@mugcat.fr
license='MIT'
description=Gerance is a simple tool intended to manage your project's requirements and traceability.
long_description= file: README.rst
long_description_content_type=text/x-rst
url=https://github.com/fdmysterious/gerance
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator

[options]
package_dir=
	= src

include_package_data=true

packages= find:
python_requires = >=3.9

install_requires =
	gherkin-official==24.1.0
	tabulate==0.9.0
	gherkin-paperwork @ git+https://github.com/fdmysterious/gherkin-paperwork.git@34a47e5665293f0dca4645996599cce4c8e6de45
	lxml==4.9.2
	toml==0.10.2

[options.packages.find]
where = src
